--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-    <title>情報学特講Ⅰ 春学期</title>
+    <title>情報学特講Ⅱ 秋学期</title>
     <!--CSS練習1-->
     <link rel="stylesheet" href="mystyle.css"> <!--この行を追加 --> <!--これは、cssファイルの読み込みを指定している。-->
     <script src="myjs.js"></script> <!--ここで、JavaScriptのファイルの読み込みを指定している。 -->
