--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
                 <p class="sample2">セキュリティ対策は今後ますます重要になるでしょう。</p>
                 <p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
                 <br>
+                <br>
+                <h1>イベントハンドラの練習</h1>
+                <input type="button" value="ここをクリック" onclick="alert('Hello,Ryoga!');">
             </body>
 </html>
