--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
                 <br>
                 <br>
                 <h1>イベントハンドラの練習</h1>
-                <input type="button" value="ここをクリック" onclick="alert('Hello,Ryoga!');">
+                <input type="button" value="ここをクリック" <!--onclick--> ondblclick="alert('Hello,Ryoga!');">
             </body>
 </html>
