--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--CSS練習1-->
     <link rel="stylesheet" href="mystyle.css"> <!--この行を追加 --> <!--これは、cssファイルの読み込みを指定している。-->
     <script src="myjs.js"></script> <!--ここで、JavaScriptのファイルの読み込みを指定している。 -->
+    <script src="ex6-1.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
@@ -53,5 +54,6 @@
                 <br>
                 <h1>イベントハンドラの練習</h1>
                 <!--<input type="button" value="ここをクリック" ondblclick="alert('Hello,Ryoga!');">-->
+                <input type="button" value="ここをクリック" onclick="sayhello61();">
             </body>
 </html>
