--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
                 <h1>イベントハンドラの練習</h1>
                 <!--<input type="button" value="ここをクリック" ondblclick="alert('Hello,Ryoga!');">-->
                 <input type="button" value="ここをクリック" onclick="sayhello61();">
+                <input type="button" value="ここをクリック" onclick="syahello61();sayhello61();">
             </body>
 </html>
