--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                 <h1>イベントハンドラの練習</h1>
                 <!--<input type="button" value="ここをクリック" ondblclick="alert('Hello,Ryoga!');">-->
                 <input type="button" value="ここをクリック" onclick="sayhello61();">
-                <!--<input type="button" value="ここをクリック" onclick="syahello61();sayhello61();">-->
+                <br>
+                <input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
+                <br>
+                <input type="button" value="ここをクリック" onclick="saygoodbye();>
             </body>
 </html>
