--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
                 <br>
                 <input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
                 <br>
-                <input type="button" value="ここをクリック" onclick="saygoodbye();>
+                <input type="button" value="ここをクリック" onclick="saygoodbye61();>
             </body>
 </html>
