--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
                 <br>
                 <br>
-                <h1>イベントハンドラの練習</h1>
+                <h1>練習問題6.1</h1>
                 <!--<input type="button" value="ここをクリック" ondblclick="alert('Hello,Ryoga!');">-->
                 <input type="button" value="ここをクリック" onclick="sayhello61();">
                 <br>
