--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                 <br>
                 <input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
                 <br>
+                <br>
+                <h1>練習問題6.4</h1>
                 <input type="button" value="ここをクリック" onclick="saygoodbye();">
             </body>
 </html>
