--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <br>
                 <br>
                 <h1>練習問題6.1</h1>
-                <!--<input type="button" value="ここをクリック" ondblclick="alert('Hello,Ryoga!');">-->
+                <!--<input type="button" value="ここをクリック" onclick="alert('Hello,Ryoga!');">-->
                 <input type="button" value="ここをクリック" onclick="sayhello61();">
                 <br>
                 <input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
