--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 <br>
                 <h1>練習問題6.1</h1>
                 <!--<input type="button" value="ここをクリック" onclick="alert('Hello,Ryoga!');">-->
+
+                <h1>練習問題6.3</h1>
                 <input type="button" value="ここをクリック" onclick="sayhello61();">
                 <br>
                 <input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
