--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="mystyle.css"> <!--この行を追加 --> <!--これは、cssファイルの読み込みを指定している。-->
     <script src="myjs.js"></script> <!--ここで、JavaScriptのファイルの読み込みを指定している。 -->
     <script src="ex6-1.js"> </script>
+    <script src="ex6-5.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
@@ -63,5 +64,10 @@
                 <br>
                 <h1>練習問題6.4</h1>
                 <input type="button" value="ここをクリック" onclick="saygoodbye();">
+                <br>
+                <h1>変数の練習</h1>
+                <input type="button" value="あいさつ" onclick="sayhello65();">
+                <input type="button" value="太郎" onclick="taro65();">
+                <input type="button" value="花子" onclick="hanako65();">
             </body>
 </html>
