--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <br>
                 <h1>変数の練習</h1>
                 <input type="button" value="あいさつ" onclick="sayhello65();">
-                <input type="button" value="太郎" onclick="taro65();">
+                <input type="button" value="太郎" onclick="taro65();taroinput();">
                 <input type="button" value="花子" onclick="hanako65();">
             </body>
 </html>
