--- a/index.html
+++ b/index.html
@@ -65,9 +65,14 @@
                 <h1>練習問題6.4</h1>
                 <input type="button" value="ここをクリック" onclick="saygoodbye();">
                 <br>
-                <h1>変数の練習</h1>
+                <h1>練習問題6.5 変数の練習</h1>
+                <input type="button" value="あいさつ" onclick="sayhello65();">
+                <input type="button" value="太郎" onclick="taro65();">
+                <input type="button" value="花子" onclick="hanako65();">
+                <br>
+                <h1>練習問題6.6</h1>
                 <input type="button" value="あいさつ" onclick="sayhello65();">
                 <input type="button" value="太郎" onclick="taro65();taroinput();">
-                <input type="button" value="花子" onclick="hanako65();">
+                <input type="button" value="花子" onclick="hanako65();hanakoinput();">
             </body>
 </html>
