--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
                 <p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
                 <br>
                 <br>
-                <h1>練習問題6.1</h1>
+                <!-- <h1>練習問題6.1</h1>-->
                 <!--<input type="button" value="ここをクリック" onclick="alert('Hello,Ryoga!');">-->
 
-                <h1>練習問題6.3</h1>
+                <h1>練習問題6.1</h1>
                 <input type="button" value="ここをクリック" onclick="sayhello61();">
                 <br>
+                <br>
+                <h1>練習問題6.2</h1>
                 <input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
                 <br>
                 <br>
