--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="myjs.js"></script> <!--ここで、JavaScriptのファイルの読み込みを指定している。 -->
     <script src="ex6-1.js"> </script>
     <script src="ex6-5.js"> </script>
+    <script src="ex6-7.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
@@ -76,5 +77,13 @@
                 <input type="button" value="あいさつ" onclick="sayhello65();">
                 <input type="button" value="太郎" onclick="taro65();taroinput();">
                 <input type="button" value="花子" onclick="hanako65();hanakoinput();">
+                <br>
+                <h1>練習問題6-7 引数の練習</h1>
+                <input type="button" balue="あいさつ" onclick="sayhello67();">
+                <input type="button" value="太郎" onclick="someone('太郎');">
+                <input type="button" value="花子" onclick="someone('花子');">
+                <input type="button" value="レイ" onclick="someone('レイ');">
+                <input type="button" value="シンジ" onclick="someone('シンジ');">
+                <input type="button" value="アスカ" onclick="someone('アスカ');">
             </body>
 </html>
