--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <input type="button" value="花子" onclick="hanako65();hanakoinput();">
                 <br>
                 <h1>練習問題6-7 引数の練習</h1>
-                <input type="button" balue="あいさつ" onclick="sayhello67();">
+                <input type="button" value="あいさつ" onclick="sayhello67();">
                 <input type="button" value="太郎" onclick="someone('太郎');">
                 <input type="button" value="花子" onclick="someone('花子');">
                 <input type="button" value="レイ" onclick="someone('レイ');">
