--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="ex6-5.js"> </script>
     <script src="ex6-7.js"> </script>
     <script src="ex06-8.js"> </script>
+    <script src="ex6-88.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
@@ -92,5 +93,11 @@
                 <input type="button" value="太郎" onclick="taro68();">
                 <input type="button" value="花子" onclick="hanako68();">
                 <p id="who68">world</p>
+                <br>
+
+                <h1>練習問題6-88 InnerHTMLによる変更の練習</h1>
+                <input type="button" value="画像変更" onclick="gazo688();">
+                <p id="who688"> <img src=".image/denkyuu_off.png" alt="オフ">
+                </p>
             </body>
 </html>
