--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
                 <h1>練習問題6-88 InnerHTMLによる変更の練習</h1>
                 <input type="button" value="画像変更" onclick="gazo688();">
-                <p id="who688"> <img src=".image/denkyuu_off.png" alt="オフ">
+                <p id="who688">
+                    <img src=".image/denkyuu_off.png" alt="オフ">
                 </p>
             </body>
 </html>
