--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="ex6-5.js"> </script>
     <script src="ex6-7.js"> </script>
     <script src="ex06-8.js"> </script>
-    <script src="ex6-88.js"> </script>
+    <!--<script src="ex6-88.js"> </script>-->
 </head>
             <body>
                 <h1>練習問題2.4</h1>
