--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="ex6-5.js"> </script>
     <script src="ex6-7.js"> </script>
     <script src="ex06-8.js"> </script>
-    <!--<script src="ex6-88.js"> </script>-->
+    <script src="ex6-88.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
@@ -96,8 +96,9 @@
                 <br>
 
                 <h1>練習問題6-88 InnerHTMLによる変更の練習</h1>
-                <!-- <input type="button" value="画像変更" onclick="gazo688();"> -->
-                <!--<p id="who688"> -->
+                <input type="button" value="画像変更" onclick="gazo688();">
+                <p id="who688">
+                    <img src=".image/denkyuu_off.jpg" alt="電気オフ"
                 
                 </p>
             </body>
