--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
                 <h1>練習問題6-88 InnerHTMLによる変更の練習</h1>
                 <input type="button" value="画像変更" onclick="gazo688();">
                 <p id="who688">
-                    <img src=".image/denkyuu_off.jpg" alt="電気オフ"
-                
+                    <img src="./image/denkyuu_off.jpg" alt="電気オフ"
                 </p>
             </body>
 </html>
