--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="ex6-7.js"> </script>
     <script src="ex06-8.js"> </script>
     <script src="ex6-88.js"> </script>
+    <script src="ex06-9.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
@@ -100,5 +101,11 @@
                 <p id="who688">
                     <img src="./image/denkyuu_off.jpg" alt="オフ">
                 </p>
+                <br>
+                <h1>練習問題6-9 JavaScriptによるページの変更</h1>
+                <div id="txt1">
+                    <input type="button" value="テキストの変更" onclick="txtchange1();">
+                    城西大学
+                </div>
             </body>
 </html>
