--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="ex06-8.js"> </script>
     <script src="ex6-88.js"> </script>
     <script src="ex06-9.js"> </script>
+    <script src="ex06-10.js"> </script>
     
 </head>
             <body>
