--- a/index.html
+++ b/index.html
@@ -112,6 +112,6 @@
                 <br>
                 <h1>練習問題6-10</h1>
                 <input type="button" value="画像の変更" onclick="imgchange1();">
-                <img src='.image/josailogo1.jpg' id="logo" alt="Josai Logo1">
+                <img src=".image/josailogo1.jpg" id="logo" alt="Josai Logo1">
             </body>
 </html>
