--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                 <br>
                 <h1>練習問題6-10</h1>
                 <input type="button" value="画像の変更" onclick="imgchange1();">
-                <img src="./image/josailogo1.jpg" id="logo" alt="Josai Logo">
+                <img src="./image/josailogo1.jpg" id="logo" alt="Josai Logo1">
+                <input type="button" value="元に戻す" onclick="imgchange2();">
+                <img src="./image/josailogo2.jpg" id="logo2" alt="Josai Logo2">
+                
             </body>
 </html>
