--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>情報学特講Ⅱ 秋学期</title>
     <!--CSS練習1-->
     <link rel="stylesheet" href="mystyle.css"> <!--この行を追加 --> <!--これは、cssファイルの読み込みを指定している。-->
+    <link rel="stylesheet" href="imagechange.css">
     <script src="myjs.js"></script> <!--ここで、JavaScriptのファイルの読み込みを指定している。 -->
     <script src="ex6-1.js"> </script>
     <script src="ex6-5.js"> </script>
@@ -113,6 +114,10 @@
                 <h1>練習問題6-10</h1>
                 <input type="button" value="画像の変更" onclick="imgchange1();">
                 <img src="./image/josailogo1.jpg" id="logo" alt="Josai Logo1">
-                <input type="button" value="元に戻す" onclick="imgchange2();">    
+                <input type="button" value="元に戻す" onclick="imgchange2();">
+                <br>
+                <h1>練習問題6-10 CSSを使って画像の大きさを制御</h1>
+                <input type="button" value="画像の変更" onclick="imgchange1();">
+                <img src="./image/josailogo1.jpg" id="logo" alt="Josai Logo1" class="imagechange">
             </body>
 </html>
