--- a/index.html
+++ b/index.html
@@ -119,5 +119,6 @@
                 <h1>練習問題6-10 CSSを使って画像の大きさを制御</h1>
                 <input type="button" value="画像の変更" onclick="imgchange1();">
                 <img src="./image/josailogo1.jpg" id="logo" alt="Josai Logo1" class="imagechange">
+                <input type="button" value="元に戻す" onclick="imgchange2();">
             </body>
 </html>
