--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="ex6-88.js"> </script>
     <script src="ex06-9.js"> </script>
     <script src="ex06-10.js"> </script>
+    <script src="ex06-10-2.js> </script>
     
 </head>
             <body>
@@ -117,8 +118,8 @@
                 <input type="button" value="元に戻す" onclick="imgchange2();">
                 <br>
                 <h1>練習問題6-10 CSSを使って画像の大きさを制御</h1>
-                <input type="button" value="画像の変更" onclick="imgchange1();">
+                <input type="button" value="画像の変更" onclick="imgchange3();">
                 <img src="./image/josailogo1.jpg" id="logo" alt="Josai Logo1" class="imagechange">
-                <input type="button" value="元に戻す" onclick="imgchange2();">
+                <input type="button" value="元に戻す" onclick="imgchange4();">
             </body>
 </html>
