--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="ex6-88.js"> </script>
     <script src="ex06-9.js"> </script>
     <script src="ex06-10.js"> </script>
-    <script src="ex06-10-2.js> </script>
+    script src="ex6-10.js"> </script>
     
 </head>
             <body>
