--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <br>
                 <h1>練習問題6-11 CSSを使って画像の大きさを制御</h1>
                 <input type="button" value="画像の変更" onclick="imgchange3();">
-                <img src="./image/josailogo1.jpg" id="logo-1" alt="Josai Logo1" class="imagechange">
+                <img src="./image/josailogo1.jpg" id="josailogo" alt="Josai Logo1" class="imagechange">
                <input type="button" value="元に戻す" onclick="imgchange4();">
             </body>
 </html>
