--- a/index.html
+++ b/index.html
@@ -121,5 +121,14 @@
                 <input type="button" value="画像の変更" onclick="imgchange3();">
                 <img src="./image/josailogo1.jpg" id="Josailogo" alt="Josai Logo1" class="imagechange">
               <input type="button" value="元に戻す" onclick="imgchange4();">
+                <br>
+                <h1>練習問題6-12</h1>
+                <form name="timer">
+
+                    <input type="button" value="スタート" onclick="startfnc()">
+                    <br>
+
+                    <input type="text" name="moji" size="30" value="">
+                </form>
             </body>
 </html>
