--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
               <input type="button" value="元に戻す" onclick="imgchange4();">
                 <br>
                 <h1>練習問題6-12</h1>
-                <form name="timer">
+               <!-- <form name="timer">
 
                     <input type="button" value="スタート" onclick="startfnc()">
                     <br>
 
-                    <input type="text" name="moji" size="30" value="">
+                    <input type="text" name="moji" size="30" value=""> -->
                 </form>
             </body>
 </html>
