--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <input type="button" value="スタート" onclick="startfnc()">
                     <br>
 
-                    <input type="text" name="moji" size="30" value=""> -->
-                </form>
+                    <input type="text" name="moji" size="30" value="">
+                </form> -->
             </body>
 </html>
