--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="ex06-9.js"> </script>
     <script src="ex06-10.js"> </script>
     <script src="ex06-11.js"> </script>
+    <script src="ex06-12.js"> </script>
     
 </head>
             <body>
@@ -123,12 +124,12 @@
               <input type="button" value="元に戻す" onclick="imgchange4();">
                 <br>
                 <h1>練習問題6-12</h1>
-               <!-- <form name="timer">
+               <form name="timer">
 
                     <input type="button" value="スタート" onclick="startfnc()">
                     <br>
 
                     <input type="text" name="moji" size="30" value="">
-                </form> -->
+                </form>
             </body>
 </html>
