--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="mystyle.css"> <!--この行を追加 --> <!--これは、cssファイルの読み込みを指定している。-->
     <link rel="stylesheet" href="imagechange.css">
     <script src="myjs.js"></script> <!--ここで、JavaScriptのファイルの読み込みを指定している。 -->
-    <script src="ex6-1.js"> </script>
+    <--! <script src="ex6-1.js"> </script> -->
     <script src="ex6-5.js"> </script>
     <script src="ex6-7.js"> </script>
     <script src="ex06-8.js"> </script>
@@ -17,6 +17,7 @@
     <script src="ex06-10.js"> </script>
     <script src="ex06-11.js"> </script>
     <script src="ex06-12.js"> </script>
+    <script src="ex06-13.js"> </script>
     
 </head>
             <body>
@@ -131,5 +132,12 @@
 
                     <input type="text" name="moji" size="30" value="">
                 </form>
+                   <br>
+
+                   <h1>練習問題6-13</h1>
+                   <form> <input type="button" value="Timer"
+                           onclick="setTimeout('mes()',3000)">
+                   </form>
+               
             </body>
 </html>
