--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
                 <br>
                     <input type="text" name="moji13" size="30" value="">
                 </form>
+                <br>
+
+                <h1>練習問題6-14</h1>
+                <input type="button" value="画像の変更" onclick="imgchange5();">
+                <img src="./image/denkyuu_off.jpg" id="denkyuu_off" alt="オフ">
                
             </body>
 </html>
