--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="ex06-11.js"> </script>
     <script src="ex06-12.js"> </script>
     <script src="ex06-13.js"> </script>
+    <script src="ex06-14.js"> </script>
     
 </head>
             <body>
@@ -149,7 +150,7 @@
 
                 <h1>練習問題6-14</h1>
                 <input type="button" value="画像の変更" onclick="imgchange5();">
-                <img src="./image/denkyuu_off.jpg" id="denkyuu_off" alt="オフ">
+                <img src="./image/denkyuu_off.jpg" id="denkyuu" alt="オフ">
                
             </body>
 </html>
