--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!--CSS練習1-->
     <link rel="stylesheet" href="mystyle.css"> <!--この行を追加 --> <!--これは、cssファイルの読み込みを指定している。-->
     <link rel="stylesheet" href="imagechange.css">
-    <script src="myjs.js"></script> <!--ここで、JavaScriptのファイルの読み込みを指定している。 -->
-    <!--<script src="ex6-1.js"> </script>-->
+    <!-- <script src="myjs.js"></script> ここで、JavaScriptのファイルの読み込みを指定している。 -->
+    <script src="ex6-1.js"> </script>
     <script src="ex6-5.js"> </script>
     <script src="ex6-7.js"> </script>
     <script src="ex06-8.js"> </script>
@@ -149,7 +149,7 @@
                 <br>
 
                 <h1>練習問題6-14</h1>
-                <input type="button" value="画像の変更" onclick="imgchange5();">
+                <input type="button" value="画像の変更" onclick="gazochange();">
                 <img src="./image/denkyuu_off.jpg" id="denkyuu" alt="オフ">
                
             </body>
