--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <br>
 
                 <h1>練習問題6-14</h1>
-                <input type="button" value="画像の変更" onclick="change();">
+                <input type="button" value="画像の変更" onclick="change1();">
                 <img src="./image/denkyuu_off.jpg" id="denkyuu" alt="オフ">
                
             </body>
