--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="ex06-12.js"> </script>
     <script src="ex06-13.js"> </script>
     <script src="ex06-14.js"> </script>
+    <script src="ex07-1.js"> </script>
     
 </head>
             <body>
@@ -151,6 +152,12 @@
                 <h1>練習問題6-14</h1>
                 <input type="button" value="画像の変更" onclick="change1();setTimeout('change2()',3000);">
                 <img src="./image/denkyuu_off.jpg" id="denkyuu" alt="オフ">
+
+                <br>
+                <h1>練習問題7-1　テキスト入力の練習</h1>
+                <input type="button" value="あいさつ" onclick="sayhello71();">
+
+                <p>誰？ <input type="text" id=who71"> </p>
                
             </body>
 </html>
