--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="ex06-12.js"> </script>
     <script src="ex06-13.js"> </script>
     <script src="ex06-14.js"> </script>
-    <script src="ex07-1.js"> </script>
+    <script src="ex7-1.js"> </script>
     
 </head>
             <body>
@@ -157,7 +157,7 @@
                 <h1>練習問題7-1　テキスト入力の練習</h1>
                 <input type="button" value="あいさつ" onclick="sayhello71();">
 
-                <p>誰？ <input type="text" id=who71"> </p>
+                <p>誰？ <input type="text" id="who71"> </p>
                
             </body>
 </html>
