--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="ex06-14.js"> </script>
     <script src="ex07-1.js"> </script>
     <script src="ex07-2.js"> </script>
+    <script src="ex07-3.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
@@ -167,6 +168,12 @@
 
                     <input type="button" value="計算" onclick="add();">
                 </p>
-               
+                <br>
+
+                <h1>練習問題7-3 ボディマス指数の計算</h1>
+               <p> 身長 <input type="text" id="input3"> 体重 <input type="text" id="input4">
+
+                   <input type="button" value="計算" onclick="BMI();">
+               </p>
             </body>
 </html>
