--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <br>
 
                 <h1>練習問題7-3 ボディマス指数の計算</h1>
-               <p> 身長 <input type="text" id="input3"> 体重 <input type="text" id="input4">
+               <p> 体重 <input type="text" id="input3"> 身長 <input type="text" id="input4">
 
                    <input type="button" value="計算" onclick="BMI();">
                </p>
