--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
                 <br>
 
                 <h1>練習問題7-3 ボディマス指数の計算</h1>
-               <p> "身長（cm）：" <input type="text" id="input3"> </P>
+               <p> 身長（cm）： <input type="text" id="input3"> </P>
                
-               <p> "体重（kg）：" <input type="text" id="input4"> </p>
+               <p> 体重（kg）： <input type="text" id="input4"> </p>
 
                    <input type="button" value="計算" onclick="BMI();">
             </body>
