--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="ex07-2.js"> </script>
     <script src="ex07-3.js"> </script>
     <script src="ex07-4.js"> </script>
+    <script src="ex07-5.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
