--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="ex07-4.js"> </script>
     <script src="ex07-5.js"> </script>
     <script src="ex07-6.js"> </script>
+    <script src="ex07-7.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
@@ -206,6 +207,12 @@
                     
                     <input type="button" value="解答" onclick="nazo76();">
                 </p>
+                <br>
+
+                <h1>練習問題7-7</h1>
+                <input type="text" id="ansert77">
+
+                <input type="button" value="解答" onclick="nazo77();">
                     
             </body>
 </html>
