--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="ex07-5.js"> </script>
     <script src="ex07-6.js"> </script>
     <script src="ex07-7.js"> </script>
+    <script src="ex07-8.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
@@ -200,7 +201,7 @@
                 </p>
                 <br>
 
-                <h1>練習問題7-6　なぞなぞ</h1>
+                <h1>練習問題7-6　なぞなぞ（練習問題7-5と逆の処理）</h1>
                 <p>目を閉じてないと見られないものはなーに？</p>
                 
                 <p> 答（漢字１文字で）: <input type="text" id="answer76">
@@ -209,10 +210,16 @@
                 </p>
                 <br>
 
-                <h1>練習問題7-7</h1>
+                <h1>練習問題7-7　なぞなぞ（比較演算子と代入の違い）</h1>
                 <input type="text" id="ansert77">
 
                 <input type="button" value="解答" onclick="nazo77();">
+                <br>
+
+                <h1>練習問題7-8　なぞなぞ（練習問題7-7の修正版</h1>
+                <input type="text" id="ansert78">
+
+                <input type="button" value="解答" onclick="nazo78();">
                     
             </body>
 </html>
