--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
                 <br>
 
                 <h1>練習問題7-7　なぞなぞ（比較演算子と代入の違い）</h1>
-                <input type="text" id="ansert77">
+                <input type="text" id="answer77">
 
                 <input type="button" value="解答" onclick="nazo77();">
                 <br>
 
                 <h1>練習問題7-8　なぞなぞ（練習問題7-7の修正版</h1>
-                <input type="text" id="ansert78">
+                <input type="text" id="anwer78">
 
                 <input type="button" value="解答" onclick="nazo78();">
                     
