--- a/index.html
+++ b/index.html
@@ -217,9 +217,12 @@
                 <br>
 
                 <h1>練習問題7-8　なぞなぞ（練習問題7-7の修正版</h1>
-                <input type="text" id="anwer78">
+                <input type="text" id="answer78">
 
                 <input type="button" value="解答" onclick="nazo78();">
+                <br>
+
+                <h1>練習問題7-9　なぞなぞ（ひらがなでも正解版）</h1>
                     
             </body>
 </html>
