--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="ex07-6.js"> </script>
     <script src="ex07-7.js"> </script>
     <script src="ex07-8.js"> </script>
+    <script src="ex07-9.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
@@ -223,6 +224,8 @@
                 <br>
 
                 <h1>練習問題7-9　なぞなぞ（ひらがなでも正解版）</h1>
-                    
+                <input type="text" id="answer79">
+
+                <input type="button" value="解答" onclick="nazo79();">    
             </body>
 </html>
