--- a/index.html
+++ b/index.html
@@ -226,6 +226,14 @@
                 <h1>練習問題7-9　なぞなぞ（ひらがなでも正解版）</h1>
                 <input type="text" id="answer79">
 
-                <input type="button" value="解答" onclick="nazo79();">    
+                <input type="button" value="解答" onclick="nazo79();">
+                <br>
+
+                <h1>練習問題7-10 ボディマス指数の計算（肥満度表示あり）</h1>
+                <p> 身長（cm）： <input type="text" id="height1"> </P>
+                
+                <p> 体重（kg）： <input type="text" id="'body weight1"> </p>
+
+                   <input type="button" value="計算" onclick="BMI();">
             </body>
 </html>
