--- a/index.html
+++ b/index.html
@@ -234,6 +234,6 @@
                 
                 <p> 体重（kg）： <input type="text" id="'body weight1"> </p>
 
-                   <input type="button" value="計算" onclick="BMI();">
+                   <input type="button" value="計算" onclick="BMI2();">
             </body>
 </html>
