--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="ex07-7.js"> </script>
     <script src="ex07-8.js"> </script>
     <script src="ex07-9.js"> </script>
+    <script src="ex07-10.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
