--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <h1>練習問題7-10 ボディマス指数の計算（肥満度表示あり）</h1>
                 <p> 身長（cm）： <input type="text" id="height1"> </P>
                 
-                <p> 体重（kg）： <input type="text" id="'body weight1"> </p>
+                <p> 体重（kg）： <input type="text" id="bodyweight1"> </p>
 
                    <input type="button" value="計算" onclick="BMI2();">
             </body>
