--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="ex07-8.js"> </script>
     <script src="ex07-9.js"> </script>
    <script src="ex07-10.js"> </script>
+   <script src="ex07-11.js"> </script>
 </head>
             <body>
                 <h1>練習問題2.4</h1>
@@ -236,5 +237,14 @@
                 <p> 体重（kg）： <input type="text" id="bodyweight1"> </p>
 
                    <input type="button" value="計算" onclick="BMI2();">
+                <br>
+
+                <h1>練習問題7-11 閏年か平年かの判定</h1>
+                <p>西暦を入力してください。ただし、数字のみの入力でお願いします。
+                <input type="text" id="year">
+                </p>
+
+                <input type="button" value="判定" onclick="yearjudge;">
+                
             </body>
 </html>
