--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <input type="text" id="year">
                 </p>
 
-                <input type="button" value="判定" onclick="leapyear;">
+                <input type="button" value="判定" onclick="leapyearjudge;">
                 
             </body>
 </html>
